# autonomous-investment-agent-live

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
src/: __init__.py  config.py  logger.py  main.py
src/agents/: __init__.py  analyst.py  graph.py  recommender.py  researcher.py  state.py  tools.py
src/analysis/: risk.py  scoring.py  sentiment.py  technical.py
src/data/: cache.py  fetcher.py  models.py
src/data/sources/: __init__.py  finnhub_source.py  newsapi_source.py  yfinance_source.py
src/portfolio/: __init__.py  backtester.py  optimizer.py  rebalancer.py  simulator_db.py  valuation_engine.py
src/reports/: __init__.py  charts.py  generator.py  html_report.py
