[project]
name = "autonomous-investment-agent"
version = "1.0.0"
description = "Production-grade autonomous investment research agent with multi-source data, AI analysis, portfolio optimization, and automated reporting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Santhosh Ananth" }]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    # Data Collection
    "yfinance>=0.2.30",
    "newsapi-python>=0.2.7",
    "finnhub-python>=2.4.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "aiohttp>=3.9",
    # Analysis
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas-ta-classic>=0.6",
    "vaderSentiment>=3.3",
    # Agents (LangGraph + Ollama)
    "langgraph>=1.2",
    "langchain>=1.3",
    "langchain-ollama>=1.0",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    # Portfolio Optimization
    "PyPortfolioOpt>=1.5",
    "vectorbt>=1.0",
    # Reports & Visualization
    "plotly>=6.0",
    "kaleido>=1.0",
    "reportlab<4.1.0",
    "jinja2>=3.1",
    # Dashboard
    "streamlit>=1.30",
    # Scheduling
    "APScheduler>=3.10,<4.0",
    # CLI
    "click>=8.1",
    "xhtml2pdf>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
agent = "src.main:cli"
dashboard = "streamlit_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external APIs",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]
